dev-bked/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bkextest
  annotations:
    cert-manager.io/cluster-issuer: "bke-ci-ucc"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dbkedtest.virtorch.brown.edu
    secretName: dbkedtest-tls
  rules:
  - host: dbkedtest.virtorch.brown.edu
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: bkextest
            port: 
             name: http-web
